--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -69,8 +69,9 @@
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
     /* --primary: oklch(87.587% 0.28215 140.052); */
-    --primary: oklch(63.334% 0.00787 268.542);
-    --primary-foreground: oklch(100% 0.00011 271.152);
+    /* E-Club Green approx #046A4E */
+    --primary: oklch(0.45 0.14 150);
+    --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
     --muted: oklch(0.97 0 0);
@@ -88,11 +89,12 @@
     --chart-4: oklch(0.828 0.189 84.429);
     --chart-5: oklch(0.769 0.188 70.08);
     --radius: 0.625rem;
-    --sidebar: oklch(0.985 0 0);
-    --sidebar-foreground: oklch(0.145 0 0);
-    --sidebar-primary: oklch(0.205 0 0);
+    /* Light Sidebar */
+    --sidebar: oklch(0.97 0 0);
+    --sidebar-foreground: oklch(0.3 0 0);
+    --sidebar-primary: oklch(0.45 0.14 150);
     --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.97 0 0);
+    --sidebar-accent: oklch(0.95 0 0);
     --sidebar-accent-foreground: oklch(0.205 0 0);
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.87 0 0);
@@ -105,8 +107,8 @@
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.145 0 0);
     --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(87.587% 0.28215 140.052);
-    --primary-foreground: oklch(0.145 0 0);
+    --primary: oklch(0.45 0.14 150);
+    --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.985 0 0);
     --muted: oklch(0.269 0 0);
@@ -125,7 +127,7 @@
     --chart-5: oklch(0.645 0.246 16.439);
     --sidebar: oklch(0.205 0 0);
     --sidebar-foreground: oklch(0.985 0 0);
-    --sidebar-primary: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.45 0.14 150);
     --sidebar-primary-foreground: oklch(0.985 0 0);
     --sidebar-accent: oklch(0.269 0 0);
     --sidebar-accent-foreground: oklch(0.985 0 0);
@@ -163,11 +165,12 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+    * {
+        @apply border-border outline-ring/50;
     }
-  body {
-    @apply bg-background text-foreground;
+
+    body {
+        @apply bg-background text-foreground;
     }
 }
 
